# g13

./: .gitignore  WG10_MOUNTAIN_DEEP_DIVE.md  run.ps1
plans and docs/plans/: 00_ARCHITECTURE.md  01_TOOLCHAIN.md  02_WORKFLOW.md  03_DEM_CATALOG.md  04_CODE_MAP.md  DRIFT_LOG.md  HANDOFF.md  M2_4_POSTMORTEM.md  M2_DESIGN.md  MILESTONE_1_land.md  MILESTONE_2_biomes.md  PROGRESS.md  README.md  ROADMAP.md
rust/: Cargo.toml
rust/dem_distill/: Cargo.toml
rust/dem_distill/src/: analyze.rs  archetype.rs  fingerprint.rs  kernel.rs  main.rs  sidecar.rs
rust/dem_distill/tests/: fingerprints_sane.rs
rust/gdext/: Cargo.toml
rust/gdext/src/: field_compute.rs  field_gpu.rs  fingerprints.rs  lib.rs  macro_gpu.rs  page_pool.rs  render_gpu.rs
rust/gdext/src/macro_cache/: bake.rs  cache.rs  kernels.rs  mod.rs  region.rs
rust/structural_scaffold/: Cargo.toml
rust/structural_scaffold/src/: array_ops.rs  lib.rs  main.rs  recipe_noise.rs  recipes.rs
rust/structural_scaffold/src/recipes/: helpers.rs  mountain.rs
wg-13/: icon.svg.import  project.godot  wg13.gdextension  wg13.gdextension.uid
wg-13/_captures/: m1_3_page.png.import  m1_3_page_seed2.png.import  m1_4_grid3x3.png.import
wg-13/captures/: climate_capture.gd  climate_capture.gd.uid  dem_grounded_shape_capture.gd  dem_grounded_shape_capture.gd.uid  journey_vista.gd  shape_capture.gd  shape_capture.gd.uid  stream_capture.gd  stream_capture.gd.uid
wg-13/data/: dem_fingerprints.json  dem_kernels.index.json
wg-13/scenes/: dem_grounded_terrain_review.tscn  demo.tscn  m2_4b_scaffold_3d_review.tscn  m2_4b_scaffold_oracle_playable_review.tscn  m2_4b_scaffold_playable_scale_review.tscn
wg-13/scripts/: auto_tour.gd  auto_tour.gd.uid  dem_grounded_review_view.gd  dem_grounded_review_view.gd.uid  dem_grounded_world_view.gd  dem_grounded_world_view.gd.uid  fly_camera.gd  fly_camera.gd.uid  m1_3_view.gd  m1_3_view.gd.uid  m1_4_grid_view.gd  m1_4_grid_view.gd.uid  perf_hud.gd  perf_hud.gd.uid  player_capsule.gd  player_capsule.gd.uid  scaffold_3d_review.gd  scaffold_3d_review.gd.uid  view_legend_hud.gd  view_legend_hud.gd.uid  world_origin.gd  world_view.gd  world_view.gd.uid
wg-13/shaders/: field_height.glsl  field_height.glsl.import  field_height_dem_grounded.glsl  field_height_dem_grounded.glsl.import  field_height_probe.glsl  ring_displace.gdshader  ring_displace.gdshader.uid
wg-13/tests/: hud_smoke_check.gd  hud_smoke_check.gd.uid  m1_2_field_check.gd  m1_2_field_check.gd.uid  m1_3_capture.gd  m1_3_capture.gd.uid  m1_3_capture_seed2.gd  m1_3_capture_seed2.gd.uid  m1_4_capture.gd  m1_4_capture.gd.uid  m1_4_seam_check.gd  (+48 more)
(+40 files in other folders)
