[package]
name = "dem_distill"
version = "0.1.0"
edition = "2021"
publish = false

# OFFLINE tool only — NOT linked into the wg13 cdylib (no .tif at runtime,
# 03_DEM_CATALOG hard rule). Run with: cargo run -p dem_distill -- <dir> <out>
[[bin]]
name = "dem_distill"
path = "src/main.rs"

[dependencies]
tiff = "0.9"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
